--- a/index.html
+++ b/index.html
@@ -22,45 +22,15 @@
 
         <div class="jumbotron">
 
-            <h1>Crystals Collector!</h1>
+            <h1>Crystal Collector!</h1>
 
-            <div class="win">
-                <h3>Wins: </h3>
-            </div>
-            <div class="loss">
-                <h3>Losses: </h3>
-            </div>
 
             <div class="crystals">
-                <img src="./assets/images/diamond.png" alt="Diamond" class="diamond">
-                <img src="./assets/images/emerald.png" alt="Emerald" class="emerald">
-                <img src="./assets/images/marquis.png" alt="Marquis" class="marquis">
-                <img src="./assets/images/pearl.png" alt="Pearl" class="pearl">
-
             </div>
-
-
-
-
-            <div class="rules">
-                <p>You will be given a random number at the start of the game</p>
-                <br>
-                <p>There are four crystals below. By clicking one crystal you will add a specific amount of points to your total score.</p>
-                <br>
-                <p>You win the game by matching your total score to random bumber, you lose the game if your total score goes above the random number.</p>
-                <br>
-                <p>The value of each crystal is hidden from you until you click on it.</p>
-                <br>
-                <p>Each time when th fame starts, the game will change the values of each crystal.</p>
-            </div>
-
-
-
-
-
-
 
         </div>
+
+
     </div>
 
 
