wins, loss and counter added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 
             <h1>Crystal Collector!</h1>
 
+            <div id="numToguess"></div>
+            <div id="addedNum"></div>
 
             <div class="crystals">
             </div>
+
+            <div class="win"></div>
+            <div class="loss"></div>
 
         </div>
 
