wins/loss bug fix(remains on screen now), added score counter stays on screen now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Crystal Collector!</h1>
 
             <div id="numToguess"></div>
-            <div id="addedNum"></div>
+            <div id="counter"></div>
 
             <div class="crystals">
             </div>
