--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
         </div>
 
 
+        <section id="rules">
+            <h2>Rules</h2>
+
+            <ol>
+                <li>You will be given a random number at the start of every game.</li>
+                <li>There are four crystals below. By clicking on a crystal you will add specific amount of points to you total score.</li>
+                <li>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</li>
+                <li>The value of each crystal is hidden from you until you click on it.</li>
+                <li>Each time when the game starts, the game will change the values of each crystal.</li>
+            </ol>
+
+        </section>
+
     </div>
 
 
